{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 176,
  "lineage": "4a8451b8-4fb7-7ca2-f593-3325a1b7127c",
  "resources": [
    {
      "module": "module.apache-us-east-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_instance",
      "provider": "module.apache-us-east-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:711129375688:instance/i-055790d444ba48f2f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055790d444ba48f2f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09d2686412c01d39c",
            "private_dns": "ip-172-16-10-187.ec2.internal",
            "private_ip": "172.16.10.187",
            "public_ip": "18.212.40.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f01e9006870319e2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d31bab5a4b329ada",
            "tags": {
              "Name": "TestInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-031b6a61603f72972"
            ]
          },
          "dependencies": [
            "module.apache-us-east-1.aws_key_pair.default",
            "module.apache-us-east-1.aws_security_group.test_sg",
            "module.apache-us-east-1.aws_subnet.test_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.apache-us-east-1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.apache-us-east-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711129375688:internet-gateway/igw-0ed54e9851ce98891",
            "id": "igw-0ed54e9851ce98891",
            "owner_id": "711129375688",
            "tags": {
              "Name": "TestIGW"
            },
            "vpc_id": "vpc-0344eec3c49b9f5c1"
          },
          "dependencies": [
            "module.apache-us-east-1.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.apache-us-east-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_rt",
      "provider": "module.apache-us-east-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711129375688:route-table/rtb-02ebc8a7e5b3ec4bf",
            "id": "rtb-02ebc8a7e5b3ec4bf",
            "owner_id": "711129375688",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed54e9851ce98891",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TestSubnet RT"
            },
            "vpc_id": "vpc-0344eec3c49b9f5c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.apache-us-east-1.aws_internet_gateway.igw",
            "module.apache-us-east-1.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.apache-us-east-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_subnet_rt",
      "provider": "module.apache-us-east-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bf86f7e9ac530da",
            "route_table_id": "rtb-02ebc8a7e5b3ec4bf",
            "subnet_id": "subnet-0d31bab5a4b329ada"
          },
          "dependencies": [
            "module.apache-us-east-1.aws_internet_gateway.igw",
            "module.apache-us-east-1.aws_route_table.test_rt",
            "module.apache-us-east-1.aws_subnet.test_subnet",
            "module.apache-us-east-1.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.apache-us-east-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_sg",
      "provider": "module.apache-us-east-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711129375688:security-group/sg-031b6a61603f72972",
            "description": "Allow incoming/Outgoing HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-031b6a61603f72972",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_test_web",
            "name_prefix": "",
            "owner_id": "711129375688",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TestInstance_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0344eec3c49b9f5c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.apache-us-east-1.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.apache-us-east-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_subnet",
      "provider": "module.apache-us-east-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711129375688:subnet/subnet-0d31bab5a4b329ada",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.10.0/24",
            "id": "subnet-0d31bab5a4b329ada",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "711129375688",
            "tags": {
              "Name": "TestSubnet"
            },
            "tags_all": {
              "Name": "TestSubnet"
            },
            "vpc_id": "vpc-0344eec3c49b9f5c1"
          },
          "dependencies": [
            "module.apache-us-east-1.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.apache-us-east-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "module.apache-us-east-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711129375688:vpc/vpc-0344eec3c49b9f5c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-09305b0b66446ee1b",
            "default_route_table_id": "rtb-05fa971d16990c7f7",
            "default_security_group_id": "sg-04f9616e552629f70",
            "dhcp_options_id": "dopt-9c873ce6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0344eec3c49b9f5c1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05fa971d16990c7f7",
            "owner_id": "711129375688",
            "tags": {
              "Name": "TestVPC"
            },
            "tags_all": {
              "Name": "TestVPC"
            }
          }
        }
      ]
    }
  ]
}